# google-sheets-mcp

./: .gitignore  README.md  install-claude-cli.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: CONNECT_GOOGLE_ACCOUNT.md
src/claude_google_sheets/: server.py  setup.py
src/claude_google_sheets/auth/: oauth_manager.py
src/claude_google_sheets/core/: tool_handler.py
src/claude_google_sheets/tools/: drive_tools.py
